app/k8s/deployment-blue.yaml
# ==========================================
# Deployment BLUE
# Versión activa de la aplicación
# ==========================================

apiVersion: apps/v1
kind: Deployment
metadata:
  name: techwave-blue
  namespace: techwave
  labels:
    app: techwave
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: techwave
      version: blue
  template:
    metadata:
      labels:
        app: techwave
        version: blue
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: techwave
          image: ghcr.io/fmartinezaltolaguirre/techwave-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
