app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techwave-blue
  namespace: techwave
  labels:
    app: techwave
    version: blue
spec:
  selector:
    app: techwave
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: http
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: techwave-green
  namespace: techwave
  labels:
    app: techwave
    version: green
spec:
  selector:
    app: techwave
    version: green
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: http
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: techwave-active
  namespace: techwave
  labels:
    app: techwave
    role: active
spec:
  selector:
    app: techwave
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: http
      protocol: TCP
  type: ClusterIP
