app/k8s/ingress.yaml
# ==========================================
# Ingress TechWave
# Expone el servicio activo de la estrategia Blue/Green
# ==========================================

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techwave-ingress
  namespace: techwave
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: techwave.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: techwave-active
                port:
                  number: 80
